tinygrad_repo/extra/qcom_gpu_driver/msm_kgsl.py


struct_kgsl_sharedmem_from_pmem._pack_ = 1 # source:False
struct_kgsl_sharedmem_from_pmem._fields_ = [
    ('pmem_fd', ctypes.c_int32),
    ('PADDING_0', ctypes.c_ubyte * 4),
    ('gpuaddr', ctypes.c_uint64),
    ('len', ctypes.c_uint32),
    ('offset', ctypes.c_uint32),
]

class struct_kgsl_sharedmem_free(Structure):
    pass

struct_kgsl_sharedmem_free._pack_ = 1 # source:False
struct_kgsl_sharedmem_free._fields_ = [
    ('gpuaddr', ctypes.c_uint64),
]

class struct_kgsl_cff_user_event(Structure):
    pass

struct_kgsl_cff_user_event._pack_ = 1 # source:False
struct_kgsl_cff_user_event._fields_ = [
    ('cff_opcode', ctypes.c_ubyte),
    ('PADDING_0', ctypes.c_ubyte * 3),
    ('op1', ctypes.c_uint32),
    ('op2', ctypes.c_uint32),
    ('op3', ctypes.c_uint32),
    ('op4', ctypes.c_uint32),
    ('op5', ctypes.c_uint32),
    ('__pad', ctypes.c_uint32 * 2),
]

class struct_kgsl_gmem_desc(Structure):
    pass

struct_kgsl_gmem_desc._pack_ = 1 # source:False
struct_kgsl_gmem_desc._fields_ = [
    ('x', ctypes.c_uint32),
    ('y', ctypes.c_uint32),
    ('width', ctypes.c_uint32),
    ('height', ctypes.c_uint32),
    ('pitch', ctypes.c_uint32),
]

class struct_kgsl_buffer_desc(Structure):
    pass

struct_kgsl_buffer_desc._pack_ = 1 # source:False
struct_kgsl_buffer_desc._fields_ = [
    ('hostptr', ctypes.POINTER(None)),
    ('gpuaddr', ctypes.c_uint64),
    ('size', ctypes.c_int32),
    ('format', ctypes.c_uint32),
    ('pitch', ctypes.c_uint32),
    ('enabled', ctypes.c_uint32),
]

class struct_kgsl_bind_gmem_shadow(Structure):
    pass

struct_kgsl_bind_gmem_shadow._pack_ = 1 # source:False
struct_kgsl_bind_gmem_shadow._fields_ = [
    ('drawctxt_id', ctypes.c_uint32),
    ('gmem_desc', struct_kgsl_gmem_desc),
    ('shadow_x', ctypes.c_uint32),
    ('shadow_y', ctypes.c_uint32),
    ('shadow_buffer', struct_kgsl_buffer_desc),
    ('buffer_id', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
]

class struct_kgsl_sharedmem_from_vmalloc(Structure):
    pass

struct_kgsl_sharedmem_from_vmalloc._pack_ = 1 # source:False
struct_kgsl_sharedmem_from_vmalloc._fields_ = [
    ('gpuaddr', ctypes.c_uint64),
    ('hostptr', ctypes.c_uint32),
    ('flags', ctypes.c_uint32),
]

class struct_kgsl_drawctxt_set_bin_base_offset(Structure):
    pass

struct_kgsl_drawctxt_set_bin_base_offset._pack_ = 1 # source:False
struct_kgsl_drawctxt_set_bin_base_offset._fields_ = [
    ('drawctxt_id', ctypes.c_uint32),
    ('offset', ctypes.c_uint32),
]


# values for enumeration 'kgsl_cmdwindow_type'
kgsl_cmdwindow_type__enumvalues = {
    0: 'KGSL_CMDWINDOW_MIN',
    0: 'KGSL_CMDWINDOW_2D',
    1: 'KGSL_CMDWINDOW_3D',
    2: 'KGSL_CMDWINDOW_MMU',
    255: 'KGSL_CMDWINDOW_ARBITER',
    255: 'KGSL_CMDWINDOW_MAX',
}
KGSL_CMDWINDOW_MIN = 0
KGSL_CMDWINDOW_2D = 0
KGSL_CMDWINDOW_3D = 1
KGSL_CMDWINDOW_MMU = 2
KGSL_CMDWINDOW_ARBITER = 255
KGSL_CMDWINDOW_MAX = 255
kgsl_cmdwindow_type = ctypes.c_uint32 # enum
class struct_kgsl_cmdwindow_write(Structure):
    pass

struct_kgsl_cmdwindow_write._pack_ = 1 # source:False
struct_kgsl_cmdwindow_write._fields_ = [
    ('target', kgsl_cmdwindow_type),
    ('addr', ctypes.c_uint32),
    ('data', ctypes.c_uint32),
]

class struct_kgsl_gpumem_alloc(Structure):
    pass

struct_kgsl_gpumem_alloc._pack_ = 1 # source:False
struct_kgsl_gpumem_alloc._fields_ = [
    ('gpuaddr', ctypes.c_uint64),
    ('size', ctypes.c_uint64),
    ('flags', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
]

class struct_kgsl_cff_syncmem(Structure):
    pass

struct_kgsl_cff_syncmem._pack_ = 1 # source:False
struct_kgsl_cff_syncmem._fields_ = [
    ('gpuaddr', ctypes.c_uint64),
    ('len', ctypes.c_uint64),
    ('__pad', ctypes.c_uint32 * 2),
]

class struct_kgsl_timestamp_event(Structure):
    pass

struct_kgsl_timestamp_event._pack_ = 1 # source:False
struct_kgsl_timestamp_event._fields_ = [
    ('type', ctypes.c_int32),
    ('timestamp', ctypes.c_uint32),
    ('context_id', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
    ('priv', ctypes.POINTER(None)),
    ('len', ctypes.c_uint64),
]

class struct_kgsl_timestamp_event_genlock(Structure):
    pass

struct_kgsl_timestamp_event_genlock._pack_ = 1 # source:False
struct_kgsl_timestamp_event_genlock._fields_ = [
    ('handle', ctypes.c_int32),
]

class struct_kgsl_timestamp_event_fence(Structure):
    pass

struct_kgsl_timestamp_event_fence._pack_ = 1 # source:False
struct_kgsl_timestamp_event_fence._fields_ = [
    ('fence_fd', ctypes.c_int32),
]

class struct_kgsl_gpumem_alloc_id(Structure):
    pass

struct_kgsl_gpumem_alloc_id._pack_ = 1 # source:False
struct_kgsl_gpumem_alloc_id._fields_ = [
    ('id', ctypes.c_uint32),
    ('flags', ctypes.c_uint32),
    ('size', ctypes.c_uint64),
    ('mmapsize', ctypes.c_uint64),
    ('gpuaddr', ctypes.c_uint64),
    ('__pad', ctypes.c_uint64 * 2),
]

class struct_kgsl_gpumem_free_id(Structure):
    pass

struct_kgsl_gpumem_free_id._pack_ = 1 # source:False
struct_kgsl_gpumem_free_id._fields_ = [
    ('id', ctypes.c_uint32),
    ('__pad', ctypes.c_uint32),
]

class struct_kgsl_gpumem_get_info(Structure):
    pass

struct_kgsl_gpumem_get_info._pack_ = 1 # source:False
struct_kgsl_gpumem_get_info._fields_ = [
    ('gpuaddr', ctypes.c_uint64),
    ('id', ctypes.c_uint32),
    ('flags', ctypes.c_uint32),
    ('size', ctypes.c_uint64),
    ('mmapsize', ctypes.c_uint64),
    ('useraddr', ctypes.c_uint64),
    ('__pad', ctypes.c_uint64 * 4),
]

class struct_kgsl_gpumem_sync_cache(Structure):
    pass

struct_kgsl_gpumem_sync_cache._pack_ = 1 # source:False
struct_kgsl_gpumem_sync_cache._fields_ = [
    ('gpuaddr', ctypes.c_uint64),
    ('id', ctypes.c_uint32),
    ('op', ctypes.c_uint32),
    ('offset', ctypes.c_uint64),
    ('length', ctypes.c_uint64),
]

class struct_kgsl_perfcounter_get(Structure):
    pass

struct_kgsl_perfcounter_get._pack_ = 1 # source:False
struct_kgsl_perfcounter_get._fields_ = [
    ('groupid', ctypes.c_uint32),
    ('countable', ctypes.c_uint32),
    ('offset', ctypes.c_uint32),
    ('offset_hi', ctypes.c_uint32),
    ('__pad', ctypes.c_uint32),
]

class struct_kgsl_perfcounter_put(Structure):
    pass

struct_kgsl_perfcounter_put._pack_ = 1 # source:False
struct_kgsl_perfcounter_put._fields_ = [
    ('groupid', ctypes.c_uint32),
    ('countable', ctypes.c_uint32),
    ('__pad', ctypes.c_uint32 * 2),
]

class struct_kgsl_perfcounter_query(Structure):
    pass

struct_kgsl_perfcounter_query._pack_ = 1 # source:False
struct_kgsl_perfcounter_query._fields_ = [
    ('groupid', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
    ('countables', ctypes.POINTER(ctypes.c_uint32)),
    ('count', ctypes.c_uint32),
    ('max_counters', ctypes.c_uint32),
    ('__pad', ctypes.c_uint32 * 2),
]

class struct_kgsl_perfcounter_read_group(Structure):
    pass

struct_kgsl_perfcounter_read_group._pack_ = 1 # source:False
struct_kgsl_perfcounter_read_group._fields_ = [
    ('groupid', ctypes.c_uint32),
    ('countable', ctypes.c_uint32),
    ('value', ctypes.c_uint64),
]

class struct_kgsl_perfcounter_read(Structure):
    pass

struct_kgsl_perfcounter_read._pack_ = 1 # source:False
struct_kgsl_perfcounter_read._fields_ = [
    ('reads', ctypes.POINTER(struct_kgsl_perfcounter_read_group)),
    ('count', ctypes.c_uint32),
    ('__pad', ctypes.c_uint32 * 2),
    ('PADDING_0', ctypes.c_ubyte * 4),
]

class struct_kgsl_gpumem_sync_cache_bulk(Structure):
    pass

struct_kgsl_gpumem_sync_cache_bulk._pack_ = 1 # source:False
struct_kgsl_gpumem_sync_cache_bulk._fields_ = [
    ('id_list', ctypes.POINTER(ctypes.c_uint32)),
    ('count', ctypes.c_uint32),
    ('op', ctypes.c_uint32),
    ('__pad', ctypes.c_uint32 * 2),
]

class struct_kgsl_cmd_syncpoint_timestamp(Structure):
    pass

struct_kgsl_cmd_syncpoint_timestamp._pack_ = 1 # source:False
struct_kgsl_cmd_syncpoint_timestamp._fields_ = [
    ('context_id', ctypes.c_uint32),
    ('timestamp', ctypes.c_uint32),
]

class struct_kgsl_cmd_syncpoint_fence(Structure):
    pass

struct_kgsl_cmd_syncpoint_fence._pack_ = 1 # source:False
struct_kgsl_cmd_syncpoint_fence._fields_ = [
    ('fd', ctypes.c_int32),
]

class struct_kgsl_cmd_syncpoint(Structure):
    pass

struct_kgsl_cmd_syncpoint._pack_ = 1 # source:False
struct_kgsl_cmd_syncpoint._fields_ = [
    ('type', ctypes.c_int32),
    ('PADDING_0', ctypes.c_ubyte * 4),
    ('priv', ctypes.POINTER(None)),
    ('size', ctypes.c_uint64),
]

class struct_kgsl_submit_commands(Structure):
    pass

struct_kgsl_submit_commands._pack_ = 1 # source:False
struct_kgsl_submit_commands._fields_ = [
    ('context_id', ctypes.c_uint32),
    ('flags', ctypes.c_uint32),
    ('cmdlist', ctypes.POINTER(struct_kgsl_ibdesc)),
    ('numcmds', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
    ('synclist', ctypes.POINTER(struct_kgsl_cmd_syncpoint)),
    ('numsyncs', ctypes.c_uint32),
    ('timestamp', ctypes.c_uint32),
    ('__pad', ctypes.c_uint32 * 4),
]

class struct_kgsl_device_constraint(Structure):
    pass

struct_kgsl_device_constraint._pack_ = 1 # source:False
struct_kgsl_device_constraint._fields_ = [
    ('type', ctypes.c_uint32),
    ('context_id', ctypes.c_uint32),
    ('data', ctypes.POINTER(None)),
    ('size', ctypes.c_uint64),
]

class struct_kgsl_device_constraint_pwrlevel(Structure):
    pass

struct_kgsl_device_constraint_pwrlevel._pack_ = 1 # source:False
struct_kgsl_device_constraint_pwrlevel._fields_ = [
    ('level', ctypes.c_uint32),
]

class struct_kgsl_syncsource_create(Structure):
    pass

struct_kgsl_syncsource_create._pack_ = 1 # source:False
struct_kgsl_syncsource_create._fields_ = [
    ('id', ctypes.c_uint32),
    ('__pad', ctypes.c_uint32 * 3),
]

class struct_kgsl_syncsource_destroy(Structure):
    pass

struct_kgsl_syncsource_destroy._pack_ = 1 # source:False
struct_kgsl_syncsource_destroy._fields_ = [
    ('id', ctypes.c_uint32),
    ('__pad', ctypes.c_uint32 * 3),
]

class struct_kgsl_syncsource_create_fence(Structure):
    pass

struct_kgsl_syncsource_create_fence._pack_ = 1 # source:False
struct_kgsl_syncsource_create_fence._fields_ = [
    ('id', ctypes.c_uint32),
    ('fence_fd', ctypes.c_int32),
    ('__pad', ctypes.c_uint32 * 4),
]

class struct_kgsl_syncsource_signal_fence(Structure):
    pass

struct_kgsl_syncsource_signal_fence._pack_ = 1 # source:False
struct_kgsl_syncsource_signal_fence._fields_ = [
    ('id', ctypes.c_uint32),
    ('fence_fd', ctypes.c_int32),
    ('__pad', ctypes.c_uint32 * 4),
]

class struct_kgsl_cff_sync_gpuobj(Structure):
    pass

struct_kgsl_cff_sync_gpuobj._pack_ = 1 # source:False
struct_kgsl_cff_sync_gpuobj._fields_ = [
    ('offset', ctypes.c_uint64),
    ('length', ctypes.c_uint64),
    ('id', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
]

class struct_kgsl_gpuobj_alloc(Structure):
    pass

struct_kgsl_gpuobj_alloc._pack_ = 1 # source:False
struct_kgsl_gpuobj_alloc._fields_ = [
    ('size', ctypes.c_uint64),
    ('flags', ctypes.c_uint64),
    ('va_len', ctypes.c_uint64),
    ('mmapsize', ctypes.c_uint64),
    ('id', ctypes.c_uint32),
    ('metadata_len', ctypes.c_uint32),
    ('metadata', ctypes.c_uint64),
]

class struct_kgsl_gpuobj_free(Structure):
    pass

struct_kgsl_gpuobj_free._pack_ = 1 # source:False
struct_kgsl_gpuobj_free._fields_ = [
    ('flags', ctypes.c_uint64),
    ('priv', ctypes.c_uint64),
    ('id', ctypes.c_uint32),
    ('type', ctypes.c_uint32),
    ('len', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
]

class struct_kgsl_gpu_event_timestamp(Structure):
    pass

struct_kgsl_gpu_event_timestamp._pack_ = 1 # source:False
struct_kgsl_gpu_event_timestamp._fields_ = [
    ('context_id', ctypes.c_uint32),
    ('timestamp', ctypes.c_uint32),
]

class struct_kgsl_gpu_event_fence(Structure):
    pass

struct_kgsl_gpu_event_fence._pack_ = 1 # source:False
struct_kgsl_gpu_event_fence._fields_ = [
    ('fd', ctypes.c_int32),
]

class struct_kgsl_gpuobj_info(Structure):
    pass
